# mkl_umath

./: CMakeLists.txt  pyproject.toml
rattler-recipe/: build.sh  recipe.yaml
scripts/: generate_umath.py
